исправил Arrays.asList() на List.of()